src/styles/soccer.css
.league-table {
    overflow-x: auto;
    padding-bottom: 5px;
}

.league-table table {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    border-collapse: collapse;
}

.league-table thead tr {
    background-color: #F4F4F4;
    border-bottom: 1px solid #BDBDBD;
}

.league-table tbody td:last-child, .league-table thead th:last-child{
    padding-right: 15px;
    font-weight: 600;
}

.league-table tbody td:first-child, .league-table thead th:first-child{
    padding-left: 15px;
}

.league-table thead th:first-child {
    padding-right: 10px;
}

.league-table thead th:nth-child(2) {
    text-align: left;
}

.league-table td, .league-table th {
    padding: 4px 9px;
    font-size: 14.5px;
}

.league-table td {
    height: 33px;
}

.league-table th {
    height: 25px;
}

.league-table tr:nth-of-type(even) {
    background-color: #FAFAFA;
}

.league-table td:nth-last-of-type(-n+8) {
    text-align: center;
    min-width: 20px;
    height: 25px;
}

.league-table td:nth-of-type(2) {
    font-weight: 600;
    padding-right: 20px;
    width: 110px;
    word-wrap: break-word;
    overflow: hidden;
}

.league-table tfoot tr {
    padding-top: 10px;
    font-size: 0.75em;
    border: none;
}

.league-table tr {
    border-bottom: 1px solid #BDBDBD;
}

.league-table caption {
    background: #cb2d3e;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    color: #fff;
    padding: 10px;
    letter-spacing: 1px;
    font-size: 1.1em;
}

#reverseTable, .toggle {
    cursor: pointer;
}

#reverseTable span {
    font-size: 0.7em;
    color: #434343;
}

.hide-team {
    position: absolute;
    visibility: hidden;
}

.toggle {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: auto;
    height: 15px;
    width: 6%;
    padding: 1px;
}

.toggle div {
    margin: auto;
    width: 0;
    height: 0;
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
}

.toggle-arrow-default {
    border-top: 11px solid #434343;
    -webkit-transition: all 0.3s ease-in;
    -o-transition: all 0.3s ease-in;
    transition: all 0.3s ease-in;
}

.toggle-arrow-collapse {
    border-bottom: 11px solid #434343;
    -webkit-transition: all 0.3s ease-in;
    -o-transition: all 0.3s ease-in;
    transition: all 0.3s ease-in;
}

#zone {
    border-bottom: 2px solid #909090;
}

#zoneReverse {
    border-top:  2px solid #909090;
}

.minus {
    color: #FF0000;
}

.plus {
    color: #008000;
}

@media screen and (max-width: 545px) {
    .league-table td, .league-table th {
        padding: 4px 3px;
        font-size: 13.5px;
    }
    
    .league-table td:nth-of-type(2) {
        padding-right: 10px;
    }
}

@media screen and (max-width: 425px) {
    .league-table td, .league-table th {
        padding: 4px 2px;
        font-size: 13px;
    }
    
    .league-table tbody td:first-child, .league-table thead th:first-child{
        padding-left: 8px;
    }
    
    .league-table tbody td:last-child, .league-table thead th:last-child{
        padding-right: 8px;
    }   
}

